<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.LinkHistoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_type_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_primary"
        android:elevation="@dimen/spacing_xsmall"
        android:paddingStart="@dimen/spacing_large"
        android:paddingTop="@dimen/spacing_large"
        android:paddingEnd="@dimen/spacing_large"
        android:paddingBottom="@dimen/spacing_xxlarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editText_type_link"
            android:layout_width="@dimen/spacing_empty"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_standard"
            android:layout_marginEnd="@dimen/spacing_standard"
            android:background="@drawable/bg_input_box"
            android:gravity="center"
            android:hint="@string/copy_type_link_hint"
            android:imeOptions="actionSearch"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="@dimen/spacing_standard"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imageButton_generate_shorten_link"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageButton_generate_shorten_link"
            android:layout_width="@dimen/spacing_xxlarge"
            android:layout_height="@dimen/spacing_xxlarge"
            android:layout_marginStart="@dimen/spacing_standard"
            android:background="@drawable/ic_baseline_send_24"
            android:contentDescription="@null"
            app:layout_constraintBottom_toBottomOf="@id/editText_type_link"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/editText_type_link"
            app:layout_constraintTop_toTopOf="@id/editText_type_link" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.11" />

    <!--    <androidx.recyclerview.widget.RecyclerView-->
    <!--        android:id="@+id/recyclerView_link_history"-->
    <!--        android:layout_width="@dimen/spacing_empty"-->
    <!--        android:layout_height="@dimen/spacing_empty"-->
    <!--        android:layout_marginStart="@dimen/spacing_large"-->
    <!--        android:layout_marginEnd="@dimen/spacing_large"-->
    <!--        android:paddingTop="@dimen/spacing_large"-->
    <!--        android:paddingBottom="@dimen/spacing_large"-->
    <!--        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
    <!--        app:layout_constraintBottom_toTopOf="@id/button_watch_links"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/guideline" />-->

    <include
        android:id="@+id/layout_last_shortened_link"
        layout="@layout/view_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/button_watch_links"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_illustration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/spacing_large"
        android:contentDescription="@string/image_illustration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        app:srcCompat="@drawable/ic_illustration" />

    <Button
        android:id="@+id/button_watch_links"
        android:layout_width="@dimen/spacing_empty"
        android:layout_height="wrap_content"
        android:text="See my links"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>