<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/spacing_large"
    android:paddingTop="@dimen/spacing_standard"
    android:paddingEnd="@dimen/spacing_large"
    android:paddingBottom="@dimen/spacing_standard">

    <TextView
        android:id="@+id/textView_link_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_standard"
        android:layout_marginEnd="@dimen/spacing_large"
        tools:text="70993" />

    <TextView
        android:id="@+id/textView_short_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/spacing_standard"
        android:autoLink="web"
        android:fontFamily="@font/poppins_regular"
        tools:text="http://www.google.com" />

</androidx.appcompat.widget.LinearLayoutCompat>
